@@ -20,6 +20,7 @@
     * a new window dedicated to the new update system has been added.
     * the new update system has been introduced in the main gui file.
     * a button and a checkbox have been added to option window to handle the new update system.
+    * a hard calibration has been added after few tests at home for temperature coming from DS18B20 and BME280.
 
 
 ### April 1 2022, Release version 0.11.0 ###
